Test case issue fix